--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,15 @@
 
     
 
-    <canvas width="1000" height="700" id="canvas"></canvas>
+  <div id="container">
+    <!-- <canvas width="1360" height="700" id="canvas"></canvas> -->
+  </div>
 
 
     <div>
     <span>Score:</span><span id="score"></div>
     <span>Munition:</span><span id="munition"></span></div>
+    <input id="renderer" type="checkbox" >
     </div>
   <script src="./index.ts"></script>
 </body>
