feat: support multiple balls

--- a/src/editor.html
+++ b/src/editor.html
@@ -20,7 +20,8 @@
             <option value="3">PADDLE_GROW</option>
             <option value="4">PADDLE_SHRINK</option>
             <option value="5">NONE</option>
-            <option value="5">EXTRA_BALL</option>
+            <option value="6">MUNITION</option>
+            <option value="6">EXTRA_BALL</option>
         </select>
         <label>Strength</label><input value="0" id="strength" type="number" />
 
