feat: added ligth controls, ball with light

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 
     <div>
     <span>Score:</span><span id="score"></div>
+      <span>Level:</span><span id="level"></span></div>
+
+      <span>Lives:</span><span id="lives"></span></div>
     <span>Munition:</span><span id="munition"></span></div>
     <input id="renderer" type="checkbox" >
     </div>
