--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,20 @@
 <html>
+    <head> </head>
+    <body>
+        <div id="container">
+            <!-- <canvas width="1360" height="700" id="canvas"></canvas> -->
+        </div>
 
-<head>
-</head>
-<body>
-
-    
-
-  <div id="container">
-    <!-- <canvas width="1360" height="700" id="canvas"></canvas> -->
-  </div>
-
-
-    <div>
-    <span>Score:</span><span id="score"></div>
-      <span>Level:</span><span id="level"></span></div>
-
-      <span>Lives:</span><span id="lives"></span></div>
-    <span>Munition:</span><span id="munition"></span></div>
-    <input id="renderer" type="checkbox" >
-    </div>
-  <script src="./index.ts"></script>
-</body>
+        <div>
+            <span>Score:</span><span id="score"></span> <span>Level:</span
+            ><span id="level"></span> <span>Lives:</span
+            ><span id="lives"></span> <span>Munition:</span
+            ><span id="munition"></span>
+            <div>
+                <label for="renderer">3D</label>
+                <input id="renderer" type="checkbox" />
+            </div>
+        </div>
+        <script src="./index.ts"></script>
+    </body>
 </html>
